adds ForwardGatewayModel class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,21 @@ include_directories(libs/cpp-jwt/include)
 include_directories(libs/cpp-base64)
 
 
-set(SOURCE_FILES main.cpp HandlerFactory.cpp handlers/NorFoundHandler.cpp utils.cpp utils.h date.h handlers/ApplePushHandler.cpp handlers/ApplePushHandler.h handlers/GooglePushHandler.cpp handlers/GooglePushHandler.h models/GooglePushModel.cpp models/GooglePushModel.h models/ApplePushModel.cpp models/ApplePushModel.h
-         libs/cpp-jwt/include/jwt/jwt.hpp libs/cpp-base64/base64.h libs/cpp-base64/base64.cpp)
+set(SOURCE_FILES
+        main.cpp
+        HandlerFactory.cpp
+        handlers/NorFoundHandler.cpp
+        utils.cpp
+        date.h
+        Settings.cpp
+        handlers/ApplePushHandler.cpp
+        handlers/GooglePushHandler.cpp
+        handlers/GooglePushHandler.h
+        models/GooglePushModel.cpp
+        models/ApplePushModel.cpp
+        models/ForwardGatewayModel.cpp
+        libs/cpp-base64/base64.cpp
+        )
 add_executable(rocketChatMobilePushGateway ${SOURCE_FILES})
 
 target_link_libraries(rocketChatMobilePushGateway -lwangle -lfolly -lz -lssl -lcrypto -levent -lgflags -lglog  -L/usr/lib64 -lpthread -pthread -lfolly -lglog -ldouble-conversion -lboost_system -lboost_thread -lproxygenhttpserver -ljsoncpp -lcurl)
