changes the logic to new FCM APIy

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
-[submodule "libs/cpp-jwt"]
-	path = libs/cpp-jwt
-	url = https://github.com/arun11299/cpp-jwt.git
 [submodule "libs/cpp-base64"]
 	path = libs/cpp-base64
 	url = https://github.com/ReneNyffenegger/cpp-base64.git
+[submodule "libs/cpr"]
+	path = libs/cpr
+	url = https://github.com/libcpr/cpr.git
+[submodule "libs/cpp-jwt"]
+	path = libs/cpp-jwt
+	url = https://github.com/arun11299/cpp-jwt
