--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: pushgateway
 data:
-  FCM_SERVER_KEY: cmVwbGFjZSBtZQ==
+  FCM_SERVICE_ACCOUNT_JSON: cmVwbGFjZSBtZQ==
   APNS_PRIVATE_KEY: cmVwbGFjZSBtZQ==
   APNS_TEAM_ID: cmVwbGFjZSBtZQ==
   APNS_KEY: cmVwbGFjZSBtZQ==
