--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
-[submodule "libs/cpp-base64"]
-	path = libs/cpp-base64
-	url = https://github.com/ReneNyffenegger/cpp-base64.git
+[submodule "libs/gflags"]
+	path = libs/gflags
+	url = https://github.com/gflags/gflags.git
+[submodule "libs/glog"]
+	path = libs/glog
+	url = https://github.com/google/glog.git
+[submodule "libs/jwt-cpp"]
+	path = libs/jwt-cpp
+	url = https://github.com/Thalhammer/jwt-cpp
 [submodule "libs/cpr"]
 	path = libs/cpr
-	url = https://github.com/libcpr/cpr.git
-[submodule "libs/cpp-jwt"]
-	path = libs/cpp-jwt
-	url = https://github.com/arun11299/cpp-jwt
+	url = git@github.com:libcpr/cpr.git
