adds OCI labels adds VERSION build arg

--- a/docker-buildenv/Dockerfile
+++ b/docker-buildenv/Dockerfile
@@ -1,6 +1,10 @@
 FROM docker.io/debian:12
 
+ARG SSH_PASS
+
 LABEL maintainer="armin.felder@osalliance.com"
+
+RUN test -n "$SSH_PASS"
 
 # Use noninteractive environment for apt
 ENV DEBIAN_FRONTEND=noninteractive
@@ -9,30 +13,24 @@ ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update \
     && apt-get install --yes \
         libjsoncpp-dev \
-        libcurl4-openssl-dev \
-        libboost-all-dev \
         cmake \
         build-essential \
         gdb \
-        git gcc g++ cmake \
-    zlib1g-dev \
-    openssl \
-     libssl-dev \
-    software-properties-common \
-        sudo \
-    curl \
-    wget \
-    cmake \
-    make \
-    pkg-config \
-    locales \
-    git \
+        git \
+        gcc \
+        g++ \
+        zlib1g-dev \
         openssl \
-     libssl-dev \
-     libc-ares-dev
-
-RUN apt-get update \
-      && apt-get install --yes \
+        libssl-dev \
+        software-properties-common \
+        sudo \
+        curl \
+        wget \
+        make \
+        pkg-config \
+        locales \
+        libssl-dev \
+        libc-ares-dev \
         uuid \
         uuid-dev \
         libossp-uuid-dev \
@@ -44,14 +42,11 @@ RUN apt-get update \
 
 RUN mkdir /var/run/sshd
 
-RUN echo 'root:GaxahhohphuYea9cah4Od2equ0cui3eich4' | chpasswd
+RUN echo 'root:${SSH_PASS}' | chpasswd
 
 RUN sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
 
 RUN sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd
-
-ENV NOTVISIBLE "in users profile"
-RUN echo "export VISIBLE=now" >> /etc/profile
 
 EXPOSE 22
 CMD ["/usr/sbin/sshd", "-D"]
